Ignoring empty selectors. Smarter z-index setting. Content script no longer runs when the site is disabled or has no profile. Added some sites to install.js.

--- a/options.css
+++ b/options.css
@@ -28,7 +28,8 @@ h1 {
 }
 
 div.options_section {
-	margin: 15px 0;
+	margin: 40px 0;
+	/*padding: 0 20px;*/
 }
 
 div.options_section input[type=button] {
